# raytracer

./: .gitignore  CMakeLists.txt  README.md
config/: billiards.conf  snowman.conf  solar_system.conf  sunset.conf
lib/color/: Color.cpp  Color.hpp
lib/math/: Matrix4.cpp  Matrix4.hpp  Point3.cpp  Point3.hpp  Ray.cpp  Ray.hpp  Vec3.cpp  Vec3.hpp
src/: Core.cpp  Core.hpp  Parser.cpp  Parser.hpp  main.cpp
src/camera/: Camera.cpp  Camera.hpp
src/factory/: Factory.cpp  Factory.hpp
src/light/: ALight.cpp  ALight.hpp  ILight.hpp  LightManager.cpp  LightManager.hpp
src/light/ambient/: AmbientLight.cpp  AmbientLight.hpp
src/light/directional/: DirectionalLight.cpp  DirectionalLight.hpp
src/material/: FlatColor.cpp  FlatColor.hpp  IMaterial.hpp
src/primitives/: APrimitive.cpp  APrimitive.hpp  IPrimitive.hpp  PrimitiveManager.cpp  PrimitiveManager.hpp
src/primitives/plane/: Plane.cpp  Plane.hpp
src/primitives/sphere/: Sphere.cpp  Sphere.hpp
